# hal

./: .gitignore  LICENSE  README.md  TODO.md  build_db.py  check_qdrant.py  config.py  custom_vllm.py  external.py  hal.py  hal_ui.py  pyproject.toml  query_db.py  rag.py  retrieval.py  start_vllm.sh
.github/: copilot-instructions.md
hal-ui/: .gitignore  README.md  package-lock.json  package.json  vite.config.js
hal-ui/src/: index.html  main.js  otel.js  splashscreen.html  styles.css
hal-ui/src-tauri/: Cargo.toml  tauri.conf.json
hal-ui/src-tauri/src/: lib.rs  main.rs
scripts/: analyze_query.py  assess_qdrant_chunks.py  check_qdrant.py  create_admin_user.py  quant-fetch.py  quantize.py  single_pdf_md.py  test_fact_extraction.py  test_markdown_chunks.py  test_md_libs.py  test_model_comparison.py  test_spacy_facts.py  test_spacy_flagging.py  update_version.py  watch_gpu.sh
src/hal/: build_db.py  config.py  db.py  external.py  hal.py  hal_facts.py  hal_ui.css  hal_ui.py  logging_config.py  prompt_template.jinja  retrieval.py  vllm_server.py
