[project]
name = "hal"
version = "0.1.0"
description = "Highly Adaptable Learning AI for text processing and RAG"
authors = [{name = "Jarrod Connolly"}]
dependencies = [
    "numpy>=1.26.4,<2.0",          # FAISS, embeddings
    "torch>=2.4.1",                # Embeddings
    "vllm>=0.6.2",                 # Llama server
    "langchain-huggingface>=0.1.0",# Embeddings
    "qdrant-client>=1.12.1",       # Retrieval
    "textual>=2.1.2",              # UI
    "langchain-community>=0.3.3",  # FAISS
    "faiss-gpu-cu12>=1.10.0",      # History store
    "fastapi>=0.115.11",           # API
    "uvicorn>=0.34.0",             # Server
    "httpx>=0.28.1",               # Streaming
]
requires-python = ">=3.12,<3.13"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
index-url = "https://pypi.org/simple/"
