[package]
name = "hal-ui"
version = "1.0.0"
description = "Highly Adaptable Learning AI"
authors = [ "Jarrod Connolly",]
edition = "2024"

[lib]
name = "hal_lib"
crate-type = [ "staticlib", "cdylib", "rlib",]

[dependencies]
tauri-plugin-opener = "2"
serde_json = "1"

[dependencies.tauri]
version = "2"
features = []

[dependencies.serde]
version = "1"
features = [ "derive",]

[dependencies.tokio]
version = "1"
features = [ "time",]

[build-dependencies.tauri-build]
version = "2"
features = []
